# whatsapp-order-intake

./: .env.example  .gitignore  CLAUDE.md  README.md  SOLUTION_DESIGN.md  app.py  main.py  pyproject.toml  requirements.txt  sample_order.xlsx
examples/: example_outputs.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chat/: ChatContainer.tsx  DateSeparator.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx  index.ts
frontend/src/components/common/: SampleMessages.tsx  index.ts
frontend/src/components/excel/: ExcelUpload.tsx  index.ts
frontend/src/components/extraction/: ConfidenceBadge.tsx  ExtractionPanel.tsx  index.ts
frontend/src/components/voice/: VoiceNoteModal.tsx  index.ts
frontend/src/pages/: DashboardPage.tsx  DemoPage.tsx
frontend/src/store/: chatStore.ts
frontend/src/types/: index.ts
src/: __init__.py  confirmation.py  erp_payload.py  extractor.py  models.py  odoo_client.py  processor.py
src/api/: __init__.py  routes.py  schemas.py  websocket.py
src/db/: __init__.py  database.py  models.py  seed.py
src/i18n/: __init__.py  messages.py  swahili_dictionary.py
src/services/: __init__.py  excel_parser.py  history.py  inventory.py  order_state.py  pricing.py  product_matching.py  transcription.py
tests/: test_extraction.py
